stateDiagram-v2
    %% L++ State Diagram: Scholar Chatbot
    [*] --> idle
    idle --> idle : INIT
    idle --> searching : SEARCH
    searching --> reviewing : DONE [error is None]
    reviewing --> searching : SEARCH
    reviewing --> analyzing : SELECT
    analyzing --> chatting : DONE [error is None]
    chatting --> chatting : ASK
    chatting --> searching : SEARCH
    chatting --> reviewing : BACK
    reviewing --> idle : RESET